--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "54a6c7dc-2336-459d-b522-25c7a375c181"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
